Add auth struct to private api: clientId, clientSecret etc.

--- a/openapi/fleet-manager-private.yaml
+++ b/openapi/fleet-manager-private.yaml
@@ -252,6 +252,17 @@ components:
                   type: array
                   items:
                     type: string
+                auth:
+                  type: object
+                  properties:
+                    clientSecret:
+                      type: string
+                    clientId:
+                      type: string
+                    ownerUserId:
+                      type: string
+                    ownerOrgId:
+                      type: string
                 endpoint:
                   type: object
                   properties:
@@ -462,6 +473,11 @@ components:
           owners: [
             "central-owner1"
           ]
+          auth:
+            clientSecret: ""
+            clientId: "client-id"
+            ownerUserId: "f:ac4bcdb5-1fb1-41c5-9323-349698b9b757:username"
+            orgId: "13442309"
           endpoint:
             host: "example-central--rfpsqbvq-em-u-u-z--ymjcwac.example.central.com"
             tls:
