--- a/dp-terraform/add-on/rhacs-terraform/Makefile
+++ b/dp-terraform/add-on/rhacs-terraform/Makefile
@@ -26,12 +26,16 @@ BUNDLE_DEFAULT_CHANNEL := --default-channel=$(DEFAULT_CHANNEL)
 endif
 BUNDLE_METADATA_OPTS ?= $(BUNDLE_CHANNELS) $(BUNDLE_DEFAULT_CHANNEL)
 
+# IMAGE_REPO is the repository (server and namespace) into which the operator images will get pushed.
+# TODO(create-ticket): ask admin to create project in quay.io/rhacs-eng
+IMAGE_REPO ?= quay.io/jrodrig
+
 # IMAGE_TAG_BASE defines the docker.io namespace and part of the image name for remote images.
 # This variable is used to construct full image tags for bundle and catalog images.
 #
 # For example, running 'make bundle-build bundle-push catalog-build catalog-push' will build and push both
 # acs.rhcloud.com/rhacs-terraform-bundle:$VERSION and acs.rhcloud.com/rhacs-terraform-catalog:$VERSION.
-IMAGE_TAG_BASE ?= acs.rhcloud.com/rhacs-terraform
+IMAGE_TAG_BASE ?= $(IMAGE_REPO)/dp-terraform-controller
 
 # BUNDLE_IMG defines the image:tag used for the bundle.
 # You can use it as an arg. (E.g make bundle-build BUNDLE_IMG=<some-registry>/<project-name-bundle>:<tag>)
@@ -49,7 +53,8 @@ ifeq ($(USE_IMAGE_DIGESTS), true)
 endif
 
 # Image URL to use all building/pushing image targets
-IMG ?= controller:latest
+IMG ?= $(IMAGE_TAG_BASE):$(VERSION)
+
 # Produce CRDs that work back to Kubernetes 1.11 (no version conversion)
 CRD_OPTIONS ?= "crd:trivialVersions=true,preserveUnknownFields=false"
 # ENVTEST_K8S_VERSION refers to the version of kubebuilder assets to be downloaded by envtest binary.
@@ -125,6 +130,9 @@ vet: ## Run go vet against code.
 test: manifests generate fmt vet envtest ## Run tests.
 	KUBEBUILDER_ASSETS="$(shell $(ENVTEST) use $(ENVTEST_K8S_VERSION) -p path)" go test ./... -coverprofile cover.out
 	
+logs/controller:
+	kubectl -n rhacs-terraform-system logs deployment/rhacs-terraform-controller-manager -f
+
 ##@ Deployment
 
 install: kustomize ## Install CRDs into the K8s cluster specified in ~/.kube/config.
