--- a/dashboards/grafana-dashboard-acs-fleet-manager.configmap.yaml
+++ b/dashboards/grafana-dashboard-acs-fleet-manager.configmap.yaml
@@ -35,6 +35,8 @@ data:
       "editable": true,
       "fiscalYearStartMonth": 0,
       "graphTooltip": 0,
+      "id": 413,
+      "iteration": 1656321484049,
       "links": [],
       "liveNow": false,
       "panels": [
@@ -115,7 +117,7 @@ data:
             {
               "datasource": {
                 "type": "prometheus",
-                "uid": "uE8liMfnz"
+                "uid": "aQ7y3WBnk"
               },
               "editorMode": "code",
               "expr": "sum(rate(envoy_cluster_upstream_rq_total{namespace=\"$namespace\",service=\"fleet-manager-envoy-metrics\",envoy_cluster_name=\"backend\"}[10m]))",
@@ -206,7 +208,7 @@ data:
             {
               "datasource": {
                 "type": "prometheus",
-                "uid": "uE8liMfnz"
+                "uid": "aQ7y3WBnk"
               },
               "editorMode": "code",
               "expr": "sum(rate(api_inbound_request_count{namespace=\"$namespace\",service=\"fleet-manager-metrics\"}[10m]))",
@@ -219,7 +221,7 @@ data:
             {
               "datasource": {
                 "type": "prometheus",
-                "uid": "uE8liMfnz"
+                "uid": "aQ7y3WBnk"
               },
               "editorMode": "code",
               "expr": "sum(rate(api_outbound_request_count{namespace=\"$namespace\",service=\"fleet-manager-metrics\"}[10m]))",
@@ -309,7 +311,7 @@ data:
             {
               "datasource": {
                 "type": "prometheus",
-                "uid": "uE8liMfnz"
+                "uid": "aQ7y3WBnk"
               },
               "editorMode": "code",
               "expr": "sum(rate(api_inbound_request_count{namespace=\"$namespace\",service=\"fleet-manager-metrics\"}[10m])) by (code)",
@@ -320,7 +322,7 @@ data:
             {
               "datasource": {
                 "type": "prometheus",
-                "uid": "${datasource}"
+                "uid": "aQ7y3WBnk"
               },
               "editorMode": "code",
               "expr": "sum(rate(api_outbound_request_count{namespace=\"$namespace\",service=\"fleet-manager-metrics\"}[10m])) by (code)",
@@ -410,7 +412,7 @@ data:
             {
               "datasource": {
                 "type": "prometheus",
-                "uid": "uE8liMfnz"
+                "uid": "aQ7y3WBnk"
               },
               "editorMode": "code",
               "expr": "go_memstats_heap_inuse_bytes{namespace=\"$namespace\",service=\"fleet-manager-metrics\"} +\ngo_memstats_heap_idle_bytes{namespace=\"$namespace\",service=\"fleet-manager-metrics\"}",
@@ -499,7 +501,7 @@ data:
             {
               "datasource": {
                 "type": "prometheus",
-                "uid": "uE8liMfnz"
+                "uid": "aQ7y3WBnk"
               },
               "editorMode": "code",
               "expr": "process_resident_memory_bytes{namespace=\"$namespace\",service=\"fleet-manager-metrics\"}",
@@ -512,10 +514,7 @@ data:
           "type": "timeseries"
         },
         {
-          "datasource": {
-            "type": "prometheus",
-            "uid": "${datasource}"
-          },
+          "datasource": "$datasource",
           "fieldConfig": {
             "defaults": {
               "color": {
@@ -588,7 +587,7 @@ data:
             {
               "datasource": {
                 "type": "prometheus",
-                "uid": "uE8liMfnz"
+                "uid": "aQ7y3WBnk"
               },
               "editorMode": "code",
               "expr": "rate(process_cpu_seconds_total{namespace=\"$namespace\",service=\"fleet-manager-metrics\"}[5m])",
@@ -614,6 +613,7 @@ data:
             },
             "hide": 0,
             "includeAll": false,
+            "label": "Datasource",
             "multi": false,
             "name": "datasource",
             "options": [],
@@ -648,7 +648,7 @@ data:
         ]
       },
       "time": {
-        "from": "now-6h",
+        "from": "now-12h",
         "to": "now"
       },
       "timepicker": {},
