Add required CRD fields
Additional validation can be performed on translate: e.g. fields
that are required depending on other fields values

--- a/dp-terraform/add-on/rhacs-terraform/config/crd/bases/dataplane.acs.rhcloud.com_terraforms.yaml
+++ b/dp-terraform/add-on/rhacs-terraform/config/crd/bases/dataplane.acs.rhcloud.com_terraforms.yaml
@@ -49,6 +49,14 @@ spec:
                         type: string
                       clientSecret:
                         type: string
+                    required:
+                    - clientId
+                    - clientSecret
+                required:
+                  - ocmToken
+                  - fleetManagerEndpoint
+                  - clusterId
+                  - redHatSSO
               acsOperator:
                 type: object
                 properties:
@@ -77,6 +85,8 @@ spec:
                         type: string
                       metricsSecret:
                         type: string
+            required:
+              - fleetshardSync
             x-kubernetes-preserve-unknown-fields: true
           status:
             description: Status defines the observed state of Terraform
