--- a/dp-terraform/add-on/rhacs-terraform/Makefile
+++ b/dp-terraform/add-on/rhacs-terraform/Makefile
@@ -136,7 +136,7 @@ test: manifests generate fmt vet envtest ## Run tests.
 	KUBEBUILDER_ASSETS="$(shell $(ENVTEST) use $(ENVTEST_K8S_VERSION) -p path)" go test ./... -coverprofile cover.out
 	
 logs/controller:
-	kubectl -n rhacs-terraform-system logs deployment/rhacs-terraform-controller-manager -f
+	kubectl -n rhacs-terraform-system logs deployment/rhacs-terraform-controller-manager -f | tee "$(CONTROLLER_EXEC).log"
 
 logs/fleetshard-sync: # Usage: make logs/fleetshard-sync ns=MY_NAMESPACE
 	kubectl -n ${ns} logs deployment/fleetshard-sync -f
