--- a/dp-terraform/add-on/rhacs-terraform/config/manager/manager.yaml
+++ b/dp-terraform/add-on/rhacs-terraform/config/manager/manager.yaml
@@ -63,9 +63,9 @@ spec:
         resources:
           limits:
             cpu: 500m
-            memory: 128Mi
+            memory: 1Gi
           requests:
-            cpu: 10m
-            memory: 64Mi
+            cpu: 100m
+            memory: 200Mi
       serviceAccountName: controller-manager
       terminationGracePeriodSeconds: 10
