--- a/dp-terraform/helm/rhacs-terraform/values.yaml
+++ b/dp-terraform/helm/rhacs-terraform/values.yaml
@@ -3,11 +3,17 @@
 # Declare variables to be passed into your templates.
 
 fleetshardSync:
-  # Can be either OCM, RHSSO, STATIC_TOKEN. When choosing RHSSO, make sure the clientId/secret is set.
-  authType: ""
+  # Can be either OCM, RHSSO, STATIC_TOKEN. When choosing RHSSO, make sure the clientId/secret is set. By default, uses OCM.
+  authType: "OCM"
+  # OCM refresh token, only required in combination with authType=OCM.
   ocmToken: ""
   fleetManagerEndpoint: ""
   clusterId: ""
+  # Static token, only required in combination with authType=STATIC_TOKEN. A sample static token can be found
+  # within Bitwarden (ACS Fleet* static token).
+  staticToken: ""
+  # Red Hat SSO secrets, only required in combination with authType=RHSSO. The client credentials can be found within
+  # Bitwarden (ACS RH SSO Fleet* serviceaccount).
   redHatSSO:
     clientId: ""
     clientSecret: ""
