1f4de67 Skeleton for e2e test suite environment -- for CI, OpenShift and Minikube. 4e3a7cb Fix INHERIT_IMAGEPULLSECRETS 0142753 Fix 41f9167 Several Improvements fcb8b34 Fixes for CI 53b3916 Do not download yq 7a40eff Retrieve vault secrets 438ba10 Initialize DOCKER env variable 4b36fb8 Don't use docker on CI 79d377a Install stern in root builder image 4dbb00a Log messages and cluster diagnostics e32a6ed Use wrapper around actual tests for log collection d45f9bd Use $DOCKER ee2097e Do not call ocm token in CI 1e98aeb dont fail when logger cannot be stopped f177776 Only cat log file if SPAWN_LOGGER=true 7248538 WIP 30132aa Fixes for stackrox operator bootstrapping

--- a/dev/env/.envrc
+++ b/dev/env/.envrc
@@ -1,2 +1,3 @@
+export GITROOT="$(git rev-parse --show-toplevel)"
 export OCM_TOKEN=$(ocm token)
-export PATH="$(git rev-parse --show-toplevel)/scripts:$PATH"
+export PATH="$GITROOT/scripts:$PATH"
