--- a/templates/service-template.yml
+++ b/templates/service-template.yml
@@ -839,6 +839,9 @@ objects:
           - name: fleet-manager-observatorium-configuration-red-hat-sso
             configMap:
               name: fake-fleet-manager-observatorium-secret
+          - name: fleet-manager-dataplane-cluster-configuration-staging
+              configMap:
+                name: fleet-manager-dataplane-cluster-configuration-staging
           initContainers:
           - name: migration
             image: ${IMAGE_REGISTRY}/${IMAGE_REPOSITORY}:${IMAGE_TAG}
@@ -896,7 +899,7 @@ objects:
             - name: fleet-manager-dataplane-cluster-scaling-config
               mountPath: /config/dataplane-cluster-configuration.yaml
               subPath: dataplane-cluster-configuration.yaml
-            - name: fleet-manager-dataplane-cluster-configuration-staging.yaml
+            - name: fleet-manager-dataplane-cluster-configuration-staging
               mountPath: /config/dataplane-cluster-configuration-staging.yaml
               subPath: dataplane-cluster-configuration-staging.yaml
             env:
