--- a/dev/env/defaults/openshift-ci.env
+++ b/dev/env/defaults/openshift-ci.env
@@ -5,3 +5,4 @@ export KUBECTL_DEFAULT="oc"
 export SPAWN_LOGGER_DEFAULT="true"
 export OPERATOR_SOURCE_DEFAULT="marketplace"
 export INSTALL_OLM_DEFAULT="false"
+export DUMP_LOGS_DEFAULT="true"
