--- a/dev/env/defaults/openshift-ci.env
+++ b/dev/env/defaults/openshift-ci.env
@@ -6,3 +6,4 @@ export SPAWN_LOGGER_DEFAULT="true"
 export OPERATOR_SOURCE_DEFAULT="marketplace"
 export INSTALL_OLM_DEFAULT="false"
 export DUMP_LOGS_DEFAULT="true"
+export ENABLE_FM_PORT_FORWARDING_DEFAULT="true"
