Use correct file name.

--- a/templates/service-template.yml
+++ b/templates/service-template.yml
@@ -472,7 +472,7 @@ objects:
             }
           ]
         }
-    jwks-static-file.json: |
+    jwks-file-static.json: |
         {
           "keys": [
             {
