Use readinessProbe instead of livenessProbe for DB deployment

--- a/dev/env/manifests/db/01-db-deployment.yaml
+++ b/dev/env/manifests/db/01-db-deployment.yaml
@@ -47,7 +47,7 @@ spec:
             - name: PGDATA
               value: "/tmp/postgresql"
           image: postgres:13
-          livenessProbe:
+          readinessProbe:
             exec:
               command:
                 - pg_isready
