--- a/dev/env/defaults/openshift-ci.env
+++ b/dev/env/defaults/openshift-ci.env
@@ -7,3 +7,4 @@ export OPERATOR_SOURCE_DEFAULT="marketplace"
 export INSTALL_OLM_DEFAULT="false"
 export DUMP_LOGS_DEFAULT="true"
 export ENABLE_FM_PORT_FORWARDING_DEFAULT="true"
+export AUTH_TYPE_DEFAULT="STATIC_TOKEN"
