--- a/dev/env/defaults/openshift-ci.env
+++ b/dev/env/defaults/openshift-ci.env
@@ -8,3 +8,4 @@ export INSTALL_OLM_DEFAULT="false"
 export DUMP_LOGS_DEFAULT="true"
 export ENABLE_FM_PORT_FORWARDING_DEFAULT="true"
 export AUTH_TYPE_DEFAULT="STATIC_TOKEN"
+export FINAL_TEAR_DOWN_DEFAULT="true"
