--- a/dev/env/manifests/fleet-manager/01-fleet-manager-secrets.yaml
+++ b/dev/env/manifests/fleet-manager/01-fleet-manager-secrets.yaml
@@ -32,4 +32,4 @@ stringData:
   dinosaur-tls.key: ""
   kubeconfig: |
     ${KUBE_CONFIG}
-  fleet-static-token: "${FLEET_STATIC_TOKEN}"
+  fleet-static-token: "${STATIC_TOKEN}"
