--- a/dev/env/manifests/fleet-manager/03-fleet-manager-service.yaml
+++ b/dev/env/manifests/fleet-manager/03-fleet-manager-service.yaml
@@ -5,7 +5,7 @@ metadata:
     kompose.cmd: kompose convert
     kompose.version: 1.26.1 (HEAD)
   labels:
-    io.kompose.service: fleet-manager
+    application: fleet-manager
   name: fleet-manager
   namespace: "$ACSMS_NAMESPACE"
 spec:
@@ -14,6 +14,6 @@ spec:
       port: 8000
       targetPort: 8000
   selector:
-    io.kompose.service: fleet-manager
+    application: fleet-manager
 status:
   loadBalancer: {}
