--- a/dp-terraform/helm/rhacs-terraform/values.yaml
+++ b/dp-terraform/helm/rhacs-terraform/values.yaml
@@ -3,6 +3,7 @@
 # Declare variables to be passed into your templates.
 
 fleetshardSync:
+  image: "quay.io/app-sre/acs-fleet-manager:main"
   # Can be either OCM, RHSSO, STATIC_TOKEN. When choosing RHSSO, make sure the clientId/secret is set. By default, uses OCM.
   authType: "OCM"
   # OCM refresh token, only required in combination with authType=OCM.
@@ -22,7 +23,7 @@ fleetshardSync:
   tokenRefresher:
     image: "quay.io/rhoas/mk-token-refresher:latest"
     issuerUrl: "https://sso.redhat.com/auth/realms/redhat-external"
-  
+
 acsOperator:
   enabled: false
   startingCSV: rhacs-operator.v3.70.0
