Make auth provider init optional

--- a/dp-terraform/helm/rhacs-terraform/templates/fleetshard-sync.yaml
+++ b/dp-terraform/helm/rhacs-terraform/templates/fleetshard-sync.yaml
@@ -31,6 +31,8 @@ spec:
           value: {{ .Values.fleetshardSync.fleetManagerEndpoint }}
         - name: CLUSTER_ID
           value: {{ .Values.fleetshardSync.clusterId }}
+        - name: CREATE_AUTH_PROVIDER
+          value: "{{ .Values.fleetshardSync.createAuthProvider }}"
         - name: AUTH_TYPE
           value: {{ .Values.fleetshardSync.authType }}
         - name: STATIC_TOKEN
