--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -107,7 +107,7 @@ jobs:
         run: make db/migrate
       - name: Setup tests secrets
         run: |
-          make ocm/setup aws/setup osd/setup redhatsso/setup dinosaurcert/setup observatorium/setup secrets/touch
+          make ocm/setup aws/setup redhatsso/setup dinosaurcert/setup observatorium/setup secrets/touch
       - name: Lint & Test
         run: |
           export GOPATH=$(go env GOPATH)
