--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,3 +14,4 @@ repos:
       - id: trailing-whitespace
         args: ["--markdown-linebreak-ext=md"]
       - id: end-of-file-fixer
+        exclude: '^(?:secrets/db.*|.*?VERSION)$' # Matches either secrets/db.* files or the VERSION file under internal/dinosaur/pkg/api/<group>/.openapi-generator
