Add end-of-file-fixer pre-commit plugin (#187)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,3 +13,5 @@ repos:
     hooks:
       - id: trailing-whitespace
         args: ["--markdown-linebreak-ext=md"]
+      - id: end-of-file-fixer
+        exclude: '^(?:secrets/db.*|.*?VERSION)$' # Matches either secrets/db.* files or the VERSION file under internal/dinosaur/pkg/api/<group>/.openapi-generator
