ROX-11414: Send routes statuses

--- a/dev/env/defaults/00-defaults.env
+++ b/dev/env/defaults/00-defaults.env
@@ -7,6 +7,7 @@ export DOCKER_DEFAULT="docker"
 export CLUSTER_TYPE_DEFAULT=""
 export INHERIT_IMAGEPULLSECRETS_DEFAULT="false" # pragma: allowlist secret
 export CLUSTER_ID_DEFAULT="1234567890abcdef1234567890abcdef"
+export CLUSTER_DNS_DEFAULT="cluster.local"
 
 export IMAGE_REGISTRY_DEFAULT="quay.io/rhacs-eng"
 STACKROX_VERSION_TAG="3.70.0-nightly-20220707"
