Fix container waiting logic. Add missing configuration (due to maste rebase). Added proper readinessProbe check for fleet-managers healthcheck port. Generalize port-forwarding script so that multiple port-forwardings for different ports can be managed at the same time.

--- a/dev/env/manifests/fleet-manager/03-fleet-manager-service.yaml
+++ b/dev/env/manifests/fleet-manager/03-fleet-manager-service.yaml
@@ -10,6 +10,9 @@ spec:
     - name: "8000"
       port: 8000
       targetPort: 8000
+    - name: healthcheck
+      port: 8083
+      targetPort: 8083
   selector:
     application: fleet-manager
 status:
