--- a/dev/env/manifests/cluster-type-minikube/06-configmap-config.yaml
+++ b/dev/env/manifests/cluster-type-minikube/06-configmap-config.yaml
@@ -18,6 +18,18 @@ data:
             ready: true
             central_versions:
               - version: "0.1.0"
+  fleetshard-authz-org-ids-development.yaml: |-
+    # RH ACS Organization (returned for personal tokens obtained by ocm token).
+    - "11009103"
+    # RHACS Managed Service Org for staging (Entry `RHACS Managed Service Org for AWS Billing` in Bitwarden).
+    - "16064548"
+    # ACS RH SSO Org Prod
+    - "16134752"
+    # org_id for the static token
+    - "12345678"
+  fleetshard-authz-org-ids-prod.yaml: |-
+    # ACS RH SSO Org Prod
+    - "16134752"
   deny-list-configuration.yaml: |-
     ---
     # A list of denied users given by their usernames
