--- a/dev/env/manifests/fleet-manager/02-fleet-manager-deployment.yaml
+++ b/dev/env/manifests/fleet-manager/02-fleet-manager-deployment.yaml
@@ -34,12 +34,18 @@ spec:
         - command:
             - sh
             - "-c"
-            - "cd /; /usr/local/bin/fleet-manager serve --api-server-bindaddress=0.0.0.0:8000 --kubeconfig=/secrets/kubeconfig || { sleep 120; false; }"
+            - "cd /; /usr/local/bin/fleet-manager serve --api-server-bindaddress=0.0.0.0:8000 --health-check-server-bindaddress=0.0.0.0:8083 --kubeconfig=/secrets/kubeconfig || { sleep 120; false; }"
           image: "$FULL_FLEET_MANAGER_IMAGE"
           imagePullPolicy: IfNotPresent
           name: fleet-manager
           ports:
             - containerPort: 8000
+            - containerPort: 8083
+          readinessProbe:
+            httpGet:
+              path: /healthcheck
+              port: 8083
+            periodSeconds: 5
           resources: {}
           volumeMounts:
             - mountPath: /secrets
