Added resource limits

--- a/dev/env/manifests/db/01-db-deployment.yaml
+++ b/dev/env/manifests/db/01-db-deployment.yaml
@@ -55,5 +55,11 @@ spec:
           name: db
           ports:
             - containerPort: 5432
-          resources: {}
+          resources:
+            requests:
+              cpu: 600m
+              memory: 2000Mi
+            limits:
+              cpu: 600m
+              memory: 2000Mi
       restartPolicy: Always
