--- a/dev/env/defaults/openshift-ci.env
+++ b/dev/env/defaults/openshift-ci.env
@@ -1,6 +1,6 @@
 export CLUSTER_TYPE_DEFAULT="openshift"
 export OPENSHIFT_MARKETPLACE_DEFAULT="true"
-export INSTALL_OPERATOR_DEFAULT="false"
+export INSTALL_OPERATOR_DEFAULT="true"
 export KUBECTL_DEFAULT="oc"
 export SPAWN_LOGGER_DEFAULT="true"
 export OPERATOR_SOURCE_DEFAULT="marketplace"
